Update .gitignore files in baseline projects.
Update .gitignore files in baseline projects and remove IDE-generated
run configurations.

--- a/freertos_coremark_clang/demos/st/stm32l475_discovery/ac6/.gitignore
+++ b/freertos_coremark_clang/demos/st/stm32l475_discovery/ac6/.gitignore
@@ -1,2 +1,9 @@
-Debug
+# Ignore IDE-generated files
 .settings
+
+# Ignore build results
+/baseline-coremark/
+
+# Ignore run configurations except one
+*.cfg
+!STM32L475VG.cfg
