--- a/microbenchmarks/demos/st/stm32l475_discovery/ac6/.cproject
+++ b/microbenchmarks/demos/st/stm32l475_discovery/ac6/.cproject
@@ -34,7 +34,8 @@
                 <option id="gnu.c.compiler.option.preprocessor.def.symbols.kage-context-switch" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
                   <listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
                   <listOptionValue builtIn="false" value="STM32L475xx"/>
-                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.hENABLE_IOT_INFO"/>
+                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.h"/>
+                  <listOptionValue builtIn="false" value="ENABLE_IOT_INFO"/>
                   <listOptionValue builtIn="false" value="ENABLE_IOT_ERROR"/>
                   <listOptionValue builtIn="false" value="SENSOR"/>
                   <listOptionValue builtIn="false" value="RFU"/>
@@ -199,7 +200,8 @@
                 <option id="gnu.c.compiler.option.preprocessor.def.symbols.kage-exception-dispatcher" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
                   <listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
                   <listOptionValue builtIn="false" value="STM32L475xx"/>
-                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.hENABLE_IOT_INFO"/>
+                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.h"/>
+                  <listOptionValue builtIn="false" value="ENABLE_IOT_INFO"/>
                   <listOptionValue builtIn="false" value="ENABLE_IOT_ERROR"/>
                   <listOptionValue builtIn="false" value="SENSOR"/>
                   <listOptionValue builtIn="false" value="RFU"/>
@@ -364,7 +366,8 @@
                 <option id="gnu.c.compiler.option.preprocessor.def.symbols.kage-queue" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
                   <listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
                   <listOptionValue builtIn="false" value="STM32L475xx"/>
-                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.hENABLE_IOT_INFO"/>
+                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.h"/>
+                  <listOptionValue builtIn="false" value="ENABLE_IOT_INFO"/>
                   <listOptionValue builtIn="false" value="ENABLE_IOT_ERROR"/>
                   <listOptionValue builtIn="false" value="SENSOR"/>
                   <listOptionValue builtIn="false" value="RFU"/>
@@ -530,7 +533,8 @@
                 <option id="gnu.c.compiler.option.preprocessor.def.symbols.kage-secure-api" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
                   <listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
                   <listOptionValue builtIn="false" value="STM32L475xx"/>
-                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.hENABLE_IOT_INFO"/>
+                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.h"/>
+                  <listOptionValue builtIn="false" value="ENABLE_IOT_INFO"/>
                   <listOptionValue builtIn="false" value="ENABLE_IOT_ERROR"/>
                   <listOptionValue builtIn="false" value="SENSOR"/>
                   <listOptionValue builtIn="false" value="RFU"/>
@@ -695,7 +699,8 @@
                 <option id="gnu.c.compiler.option.preprocessor.def.symbols.kage-stream-buffer" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
                   <listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
                   <listOptionValue builtIn="false" value="STM32L475xx"/>
-                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.hENABLE_IOT_INFO"/>
+                  <listOptionValue builtIn="false" value="MQTTCLIENT_PLATFORM_HEADER=MQTTCMSIS.h"/>
+                  <listOptionValue builtIn="false" value="ENABLE_IOT_INFO"/>
                   <listOptionValue builtIn="false" value="ENABLE_IOT_ERROR"/>
                   <listOptionValue builtIn="false" value="SENSOR"/>
                   <listOptionValue builtIn="false" value="RFU"/>
